test/e2e/access/access-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: access
status:
  phase: Running
  # ~.containerStatuses:
  #   ready: true
  #   restartCount: 0
  #   started: true
