test/e2e/commons/listenercsi-assert.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: listener-operator-daemonset
  namespace: kubedoop-operators
status:
  (numberReady >= `1`): true
