test/e2e/external-stable/listener-assert.yaml
######################### example #######################
# apiVersion: listeners.kubedoop.dev/v1alpha1
# kind: Listener
# metadata:
#   creationTimestamp: "2024-12-25T06:24:56Z"
#   generation: 1
#   name: caddy-listener-volume
#   namespace: default
#   ownerReferences:
#   - apiVersion: v1
#     blockOwnerDeletion: true
#     controller: true
#     kind: PersistentVolume
#     name: pvc-bb77a096-1cb5-4344-9145-2528a43d533b
#     uid: 66935379-ae26-47a5-afa0-6221976f5fd7
#   resourceVersion: "35770"
#   uid: 3a1448d0-cd64-4279-8a58-179ceef4be60
# spec:
#   className: external-stable
#   ports:
#   - name: http
#     port: 8080
#     protocol: TCP
#   publishNotReadyAddresses: true
# status:
#   ingressAddresses:
#   - address: 172.18.0.5
#     addressType: IP
#     ports:
#       http: 32574
#   nodePorts:
#     http: 32574
#   serviceName: caddy-listener-volume
######################### end example #######################

# Default external-stable ListenerClass serviceType is NodePort, so we assert listener ingress address is NodePort
# But external-stable servieType should LoadBalancer, when the environment support LoadBalancer
---
apiVersion: listeners.kubedoop.dev/v1alpha1
kind: Listener
metadata:
  name: caddy-listener-volume
spec:
  className: external-stable
  ports:
  - name: http
    port: 8080
    protocol: TCP
  publishNotReadyAddresses: true
status:
  ~.ingressAddresses:
    addressType: IP
  (nodePorts.http != null): true
  serviceName: caddy-listener-volume
